compiler/driver/tests/snapshots/fixtures__m6-classes__errors__abstract-instantiate.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m6-classes/errors/abstract-instantiate.scoop:6:13: error: abstract class `Base` cannot be instantiated
