compiler/driver/tests/snapshots/fixtures__m6-classes__errors__assign-struct-field.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m6-classes/errors/assign-struct-field.scoop:5:7: error: field assignment is not supported (value types are immutable)
