compiler/driver/tests/snapshots/fixtures__m6-classes__errors__assign-val-property.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m6-classes/errors/assign-val-property.scoop:5:7: error: cannot assign to immutable property `x`
